--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <img src="img/img-1.jpg" alt="img" draggable="false">
                         </div>
                         <h2>my_plant_name</h2>
-                        <span>my_plant_family_name</span>
+                        <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforUnpublishModal" data-bs-published="yes">Unpublish</button>
                     </li>
                     <li class="card">
@@ -65,7 +65,7 @@
                             <img src="img/img-2.jpg" alt="img" draggable="false">
                         </div>
                         <h2>my_plant_name</h2>
-                        <span>my_plant_family_name</span>
+                        <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforPublishModal" data-bs-published="no">Publish</button>
                     </li>
                     <li class="card published">
@@ -74,7 +74,7 @@
                             <img src="img/img-3.jpg" alt="img" draggable="false">
                         </div>
                         <h2>my_plant_name</h2>
-                        <span>my_plant_family_name</span>
+                        <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforUnpublishModal" data-bs-published="yes">Unpublish</button>
                     </li>
                     <li class="card published">
@@ -83,7 +83,7 @@
                             <img src="img/img-4.jpg" alt="img" draggable="false">
                         </div>
                         <h2>my_plant_name</h2>
-                        <span>my_plant_family_name</span>
+                        <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforUnpublishModal" data-bs-published="yes">Unpublish</button>
                     </li>
                     <li class="card">
@@ -91,7 +91,7 @@
                             <img src="img/img-5.jpg" alt="img" draggable="false">
                         </div>
                         <h2>my_plant_name</h2>
-                        <span>my_plant_family_name</span>
+                        <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforPublishModal" data-bs-published="no">Publish</button>
                     </li>
                     <li class="card">
@@ -99,7 +99,7 @@
                             <img src="img/img-6.jpg" alt="img" draggable="false">
                         </div>
                         <h2>my_plant_name</h2>
-                        <span>my_plant_family_name</span>
+                        <span class="text-muted">my_plant_family_name</span>
                         <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#clickforPublishModal" data-bs-published="no">Publish</button>
                     </li>
                 </ul>
