send to mail by JS

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
               <button type="button" class="btn btn-send">
-                <a class="text-decoration-none text-white" href="mailto:data-bs-to-owner?subject=Subject auto&body=Ici, on va mettre textarea message">
+                <a onclick="sendMail()" class="text-decoration-none text-white">
                     Send Mail
                 </a>
               </button>
